{{$NEXT}}

1.302098  2017-10-03 06:13:49-07:00 America/Los_Angeles

    - Add docs for test2_stdout and test2_stderr
    - Fix 5.6 support

1.302097  2017-10-02 19:35:08-07:00 America/Los_Angeles

    - Fix hub->process bug that could let an error pass
    - Fix #789 (Modification of read only value)
    - Fix typo in Test::Builder when looking for IPC (#777)
    - Fix #791, clone_io broke on scalar io layer
    - Fix #790 and #756, Exception event stingify exception
    - Localize $^E in context (#780)
    - Fix test that failed in verbose mode (#770)

1.302096  2017-09-10 21:16:18-07:00 America/Los_Angeles

    - Fix to work with subref-in-stash optimisation (Father C.)

1.302095  2017-08-31 20:35:22-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Make several tests work with preload

1.302094  2017-08-30 21:27:23-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix Test::Builder in a preload scenario

1.302093  2017-08-29 21:05:20-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Make sure Test::Builder does not initialize Test2 too soon.

1.302092  2017-08-28 21:30:06-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix bug in Facets for TodoDiag
    - Add API command to reset after a fork
    - Add 'important' flag to info event facet

1.302091  2017-08-08 19:50:55-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add 'new_root' constructor for formatters
    - Add intercept_deep() to the API
    - Fix bug in Version event
    - Add 'number' attribute to assertion facet

1.302090  2017-07-09 21:10:08-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix test that unintentionally required Test2::Suite

1.302089  2017-07-09 20:51:19-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix plan in buffered subtest so that the facts say it is buffered

1.302088  2017-06-28 21:55:21-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix tests on perl 5.25+ with newer Data::Dumper

1.302087  2017-06-26 20:32:21-07:00 America/Los_Angeles (TRIAL RELEASE)
